--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,14 @@
-/*==================== GOOGLE FONTS ====================*/
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-/*==================== VARIABLES CSS ====================*/
+
 :root {
     --header-height: 3rem;
 
-    /*========== Colors ==========*/
-    /* Change favorite color */
-    --hue-color: 142; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+  
+    --hue-color: 142; 
 
-    /* HSL color mode */
+  
     --first-color: hsl(var(--hue-color), 69%, 61%);
     --first-color-second: hsl(var(--hue-color), 69%, 61%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
@@ -23,10 +22,10 @@
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
-    /*========== Font and typography ==========*/
+    
     --body-font: 'Poppins', sans-serif;
 
-    /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
+    
     --big-font-size: 2rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
@@ -35,12 +34,11 @@
     --small-font-size: .813rem;
     --smaller-font-size: .75rem;
 
-    /*========== Font weight ==========*/
+    
     --font-medium: 500;
     --font-semi-bold: 600;
 
-    /*========== Margenes Bottom ==========*/
-    /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
+    
     --mb-0-25: .25rem;
     --mb-0-5: .5rem;
     --mb-0-75: .75rem;
@@ -50,13 +48,13 @@
     --mb-2-5: 2.5rem;
     --mb-3: 3rem;
 
-    /*========== z index ==========*/
+   
     --z-tooltip: 10;
     --z-fixed: 100;
     --z-modal: 1000;
 }
 
-/* Font size for large devices */
+
 @media screen and (min-width: 968px) {
     :root {
         --big-font-size: 3rem;
@@ -66,16 +64,39 @@
         --normal-font-size: 1rem;
         --small-font-size: .875rem;
         --smaller-font-size: .813rem;
+        --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+        --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+    
     }
 }
 
-/*========== Variables Dark theme ==========*/
+
+body.dark-theme{
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(var(--hue-color), 29%, 16%));
+}
+
+.nav__btns{
+  display: flex;
+  align-items: center;
+}
+
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover{
+  color: var(--first-color);
+}
 
 
-/*========== Button Dark/Light ==========*/
-
-
-/*==================== BASE ====================*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -112,7 +133,7 @@ img {
   height: auto;
 }
 
-/*==================== REUSABLE CSS CLASSES ====================*/
+
 .section {
   padding: 2rem 0 4rem;
 }
@@ -135,7 +156,7 @@ img {
   text-align: center;
 }
 
-/*==================== LAYOUT ====================*/
+
 .container {
   max-width: 768px;
   margin-left: var(--mb-1-5);
@@ -156,7 +177,7 @@ img {
   background-color: var(--body-color);
 }
 
-/*==================== NAV ====================*/
+
 .nav{
   max-width: 989px;
   height: var(--header-height);
@@ -191,7 +212,7 @@ img {
     padding: 2rem 1.5rem 4rem;
     box-shadow: 0 -1px 4px rgba(0,0,0,.15);
     border-radius: 1.5rem 1.5rem 0 0;
-    transition: .3s;
+    transition: .5s;
   }
 }
 
@@ -230,18 +251,22 @@ img {
 .nav__close:hover{
   color: var(--first-color-alt);
 }
-/* show menu */
+
 .show-menu{
   bottom: 0;
 }
 
-/* Active link */
+
+.active-link{
+  color: var(--first-color);
+}
 
 
-/* Change background header */
+.scroll-header{
+  box-shadow:  0 -1px 4px rgba(0,0,0,.15);
+}
 
 
-/*==================== HOME ====================*/
 .home__container{
   gap: 1rem;
 
@@ -327,7 +352,7 @@ img {
 
 
 
-/*==================== BUTTONS ====================*/
+
 .button{
   display: inline-block;
   background-color: var(--first-color);
@@ -352,7 +377,7 @@ img {
   align-items: center;
 }
 
-/*==================== ABOUT ====================*/
+
 .about__img{
   width: 200px;
   border-radius: .5rem;
@@ -392,7 +417,7 @@ img {
   justify-content: center;
 }
 
-/*==================== SKILLS ====================*/
+
 .skills__container{
   row-gap: 0;
 
@@ -497,7 +522,7 @@ img {
 
 
 
-/*==================== QUALIFICATION ====================*/
+
 .qualificacao__tabs{
   display: flex;
   justify-content: space-evenly;
@@ -508,6 +533,9 @@ img {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
+}
+.section__titulo{
+  text-align: center;
 }
 
 .qualificacao__button:hover{
@@ -525,6 +553,7 @@ img {
   column-gap: 1.5rem;
 }
 .qualificacao__titulo{
+  text-align: center;
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
@@ -566,41 +595,459 @@ img {
 .qualificacao__button.qualificacao__active{
   color: var(--first-color);
 }
-/*==================== SERVICES ====================*/
 
+
+.servicos__container{
+  gap: 1.5rem;
+  grid-template-columns:repeat(2, 1fr) ;
+}
+
+.servicos__content{
+  position: relative;
+  background-color: var(--body-color);
+  padding: 3.5rem .5rem 1.25rem 1.5rem;
+  border-radius: .25rem;
+  box-shadow: 0 2px 4px rgba(0,0,0,.15);
+  transition: .3s;
+}
+
+.servicos__content:hover{
+  box-shadow: 0 4px 8px rgba(0,0,0,.15);
+}
+
+.servicos__icon{
+  display: block;
+  font-size: 1.5rem;
+  color: var(--first-color);
+  margin-bottom: var(--mb-1);
+
+}
+
+.servicos__titulo{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-1);
+  font-weight: var(--font-medium);
+}
+.servicos__button{
+  cursor: pointer;
+  font-size: var(--small-font-size);
+}
+
+.button--small{
+  padding: .75rem 1rem;
+}
+
+.button--link{
+  padding: 0%;
+  background-color: transparent;
+  color: var(--first-color);
+}
+
+.button--link:hover{
+  background-color: transparent;
+  color:var(--first-color)
+}
+
+.servicos__button:hover .button__icon{
+  transform: translateX(.25rem);
+}
+
+.servicos__modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: var(--z-modal);
+  opacity: 0;
+ visibility: hidden;
+ transition: .3s;
+}
+
+.servicos__modal-content{
+  position: relative;
+  background-color: var(--container-color);
+  padding: 1.5rem;
+  border-radius: .5rem;
+}
+
+.servicos__modal-servicos{
+  row-gap:1rem;
+}
+
+.servicos__modal-servicos{
+  display:grid;
+}
+
+.servicos__modal-titulo{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-1-5);
+}
+
+.servicos__modal-close{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  color: var(--first-color);
+  cursor: pointer;
+}
+
+.servicos__modal-icon{
+  color: var(--first-color);
+  margin-right: var(--mb-0-25);
+}
 
 /* Active Modal */
+.active-modal{
+  opacity: 1;
+  visibility: visible;
+}
 
 
-/*==================== PORTFOLIO ====================*/
+.portifolio__container{
+  overflow: initial;
+}
+
+.portifolio__content{
+  padding: 0 1.5rem;
+}
+
+.portifolio__img{
+  width: 265px;
+  border-radius: .5rem;
+  justify-self: center;
+}
+
+.portifolio__titulo{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+.portifolio__descricao{
+  margin-bottom: var(--mb-0-75);
+}
+.portifolio__button:hover .button__icon{
+  transform: translateX(.25rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+  content: '';
+}
+
+.swiper-portifolio-icon{
+  font-size: 2rem;
+  color: var(--first-color);
+}
+
+.swiper-button-prev{
+  left: -.5rem;
+}
+.swiper-button-next{
+  right: -.5rem;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets{
+  bottom:-2.5rem;
+}
+
+.swiper-pagination-bullet-active{
+  background-color: var(--first-color);
+}
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullet{
+  outline: none;
+}
+
+.contato__container{
+  row-gap: 3rem;
+}
+.contato__informacao{
+  display: flex;
+  margin-bottom: var(--mb-2);
+}
+
+.contato__icon{
+  font-size: 2rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-75);
+}
+
+.contato__titulo{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.contato__subtitulo{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.contato__content{
+  background-color: var(--input-color);
+  border-radius: .5rem;
+  padding: .75rem 1rem .25rem;
+}
+
+.contato__label{
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+}
+
+.contato__input{
+  width: 100%;
+  background-color: var(--input-color);
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  border:none;
+  outline: none;
+  padding: .25rem .5rem .5rem 0;
+}
 
 
-/*==================== PROJECT IN MIND ====================*/
 
 
-/*==================== TESTIMONIAL ====================*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  background-color: var(--first-color);
+  opacity: .8;
+  padding: 0 .3rem;
+  border-radius: .4rem;
+  z-index: var(--z-tooltip);
+  transition: .4s;
+}
+
+.scrollup:hover{
+  background-color: var(--first-color-alt);
+}
+
+.scrollup__icon{
+  font-size: 1.5rem;
+  color: white;
+}
 
 
-/*==================== CONTACT ME ====================*/
+.show-scroll{
+  bottom: 5rem;
+}
 
 
-/*==================== FOOTER ====================*/
+::-webkit-scrollbar{
+  width: .60rem;
+  background-color: var(--scroll-bar-color);
+  border-radius: .5rem;
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--scroll-thumb-color);
+  border-radius: .5rem;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color:var(--text-color-light);
+}
 
 
-/*========== SCROLL UP ==========*/
+@media screen and (max-width: 350px){
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+
+  .nav__menu{
+    padding: 2rem .25rem 4rem;
+  }
+  .nav__list{
+    column-gap: 0;
+  }
+
+  .home__content{
+    grid-template-columns: .25fr 3fr;
+  }
+  .home__blob{
+    width: 180px;
+  }
+  .skills__titulo{
+    font-size: var(--normal-font-size);
+  }
+  .qualificacao__data{
+    gap: .5rem;
+
+  }
+
+  .projetos__img{
+    width: 200px;
+  }
+   
+}
 
 
-/* Show scroll */
+ @media screen and (min-width: 568px){
+  .home__content{
+    grid-template-columns: max-content 1fr 1fr;
+  }
+  .home__data{
+  grid-column: initial;
+  }
+  .home__img{
+    order: 1;
+    justify-self: center;
+  }
+  .about__container,
+  .portifolio__content,
+  .contato__container{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .qualificacao__sections{
+    display: grid;
+    grid-template-columns: .6fr;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width:768px){
+  .container{
+    margin-left: auto;
+    margin-left: auto;
+  }
+
+  body{
+    margin: 0;
+  }
+
+  .section{
+    padding: 6rem 0 2rem;
+  }
+  .section__subtitulo{
+    margin-bottom: 4rem;
+  }
+  .header{
+    top: 0;
+    bottom: initial;
+  }
+  .header,
+  .main{
+    padding: 0 1rem;
+  }
+  .nav{
+    height: calc(var(--header-height) +1.5rem);
+    column-gap: 1rem;
+  }
+  .nav__icon,
+  .nav__close,
+  .nav__toggle{
+    display: none;
+  }
+  .nav__list{
+    display: flex;
+    column-gap: 2rem;
+  }
+  .nav__menu{
+    margin-left: auto;
+  }
+  .change-theme{
+    margin: 0;
+  }
+  .home__container{
+    row-gap: 5rem;
+  }
+  .home__content{
+    padding-top: 5.5rem;
+    column-gap: 2rem;
+  }
+  .home__blob{
+    width: 270px;
+  }
+  .home__scroll{
+    display: block;
+  }
+  .home__scroll-button{
+    margin-left: 3rem;
+  }
+
+  .about__container{
+    column-gap: 5rem;
+  }
+  .about__img{
+    width: 350px;
+  }
+  .about__descricao{
+    text-align:initial;
+  }
+  .about__info{
+    justify-content: space-between;
+  }
+  .about__buttons{
+    justify-content: initial;
+  }
+  .qualificacao__tabs{
+    justify-content: center;
+  }
+  .qualificacao__button{
+    margin:0 var(--mb-1);
+  }
+  .qualificaco__sections{
+    grid-template-columns:  .5fr;
+  }
+ 
+  .portifolio__img{
+    width: 320px;
+  }
+  .portifolio__content{
+    align-items: center;
+  }
+
+}
 
 
-/*========== SCROLL BAR ==========*/
+@media screen and (min-width: 1048px){
+  .header,
+  .main,
+  .footer__container{
+    padding: 0;
+  }
+  body {
+    overflow-x: hidden; 
+    transform: translateX(-10rem);
+  
+  }
+  
+  .home__blob{
+    width: 320px;
+  }
+  .home__social{
+    transform: translateX(-6rem);
+  }
 
-
-/*==================== MEDIA QUERIES ====================*/
-/* For small devices */
-
-
-/* For medium devices */
-
-
-/* For large devices */
+  .portifolio__content{
+    column-gap: 7rem;
+  }
+  .swiper-portifolio-icon{
+    font-size: 3.5rem;
+  }
+  .swiper-button-prev{
+    left: -3.5rem;
+  }
+  .swiper-button-next{
+    right: -3.5rem;
+  }
+  .swiper-container-horizontal > .swiper-pagination-bullets{
+    bottom: -4.5rem;
+  }
+  .contato__form{
+    width: 460px;
+  }
+  .contato__input{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
